--- a/projetintegration.html
+++ b/projetintegration.html
@@ -20,7 +20,7 @@
   
 <div class="menuderoulant ">
   
-  <div class="row liensmenuderoulant"><a href="#ancre1">MENU</a></div>
+  <div class="row liensmenuderoulant"><a href="#ancre2">MENU</a></div>
   <div class="row liensmenuderoulant"><a href="#ancre2">BURGER</a></div>
   <div class="row liensmenuderoulant"><a href="#ancre3">PIZZA</a></div>
   <div class="row liensmenuderoulant"><a href="#ancre4">KEBAB</a></div>
@@ -32,13 +32,14 @@
   <div class="row liensmenuderoulant"><a href="#ancre10">PETITES FAIMS</a></div>
   <div class="row liensmenuderoulant"><a href="#ancre11">DESSERT</a></div>
   <div class="row liensmenuderoulant"><a href="#ancre12">BOISSONS</a></div>
-  <div class="row liensmenuderoulant"><a href="#ancre13">ALCOOLS</a></div>
+  <div class="row liensmenuderoulant"><a href="#ancre14">ALCOOLS</a></div>
 
 
 
 </div>
 
-<button class="accordion "><img class="img-fluid parameterimage"  src="images/menu.jpg"><a id="ancre1"></a></button>
+<div><a id="ancre2"></a></div>
+<button class="accordion "><img class="img-fluid parameterimage"  src="images/menu.jpg"></button>
 
 <div class="panel MENU" >
   <br>
@@ -163,7 +164,7 @@
 </div>
   
   
-<button class="accordion "><img class="img-fluid parameterimage ombreimage" src="images/burger.jpg"><a id="ancre2"></a></button>
+<button class="accordion "><img class="img-fluid parameterimage ombreimage" src="images/burger.jpg"><a id="ancre3"></a></button>
 <div class="panel MENU">
   <br>
  
@@ -181,7 +182,7 @@
   
 </div>
 
-<button class="accordion "><img class="img-fluid parameterimage ombreimage" src="images/pizza.jpg"><a id="ancre3"></a></button>
+<button class="accordion "><img class="img-fluid parameterimage ombreimage" src="images/pizza.jpg"><a id="ancre4"></a></button>
 <div class="panel MENU">
   <br>
   <div class="row justify-content-between">
@@ -195,7 +196,7 @@
   <br><br>
 </div>
 
-<button class="accordion "><img class="img-fluid parameterimage ombreimage" src="images/kebab.jpg"><a id="ancre4"></a></button>
+<button class="accordion "><img class="img-fluid parameterimage ombreimage" src="images/kebab.jpg"><a id="ancre5"></a></button>
 <div class="panel MENU">
   <br>
 
@@ -211,7 +212,7 @@
   
   </div>
 
-<button class="accordion "><img class="img-fluid parameterimage ombreimage " src="images/wrap.jpg"><a id="ancre5"></a></button>
+<button class="accordion "><img class="img-fluid parameterimage ombreimage " src="images/wrap.jpg"><a id="ancre6"></a></button>
 <div class="panel MENU">
   <br>
   
@@ -226,7 +227,7 @@
   <br><br>
   </div>
 
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/salade.jpg"><a id="ancre6"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/salade.jpg"><a id="ancre7"></a></button>
 <div class="panel MENU">
   <br>
   
@@ -240,7 +241,7 @@
   </div>
   <br><br>
   </div>
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/panini.jpg"><a id="ancre7"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/panini.jpg"><a id="ancre8"></a></button>
 <div class="panel MENU">
   <br>
   <div class="row justify-content-between">
@@ -254,7 +255,7 @@
   <br><br>
   </div>
 
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/americain.jpg"><a id="ancre8"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/americain.jpg"><a id="ancre9"></a></button>
 <div class="panel MENU">
   <br>
   
@@ -270,7 +271,7 @@
   </div>
 
 
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/tacos.jpg"><a id="ancre9"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/tacos.jpg"><a id="ancre10"></a></button>
 <div class="panel MENU">
   <br>
   
@@ -284,7 +285,7 @@
   </div> 
   <br><br> 
 </div>
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/petitesfaims.jpg"><a id="ancre10"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/petitesfaims.jpg"><a id="ancre11"></a></button>
 <div class="panel MENU">
   <br>
   
@@ -298,7 +299,7 @@
   </div> 
   <br><br> 
 </div>
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/dessert.jpg"><a id="ancre11"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/dessert.jpg"><a id="ancre12"></a></button>
 <div class="panel MENU">
   <br>
   
@@ -314,7 +315,7 @@
   <br><br>
 </div>
 
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/boisson.jpg"><a id="ancre12"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/boisson.jpg"><a id="ancre13"></a></button>
 <div class="panel MENU">
   <br>
   
@@ -329,7 +330,7 @@
   <br><br>
 </div>
 
-<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/alcool.jpg"><a id="ancre13"></a></button>
+<button class="accordion"><img class="img-fluid parameterimage ombreimage" src="images/alcool.jpg"><a id="ancre14"></a></button>
 <div class="panel MENU">
   <br>
   
